// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render the feedback popup if feedback is not required 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="sc-bwzfXH bwWnNX"
    >
      <div
        class="sc-bxivhb sc-ifAKCX kPfswV"
      >
        <h1
          class="sc-htpNat jTlEqc"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize"
          class="IconButton-x15t1e-0 sc-EHOje index__c-btn--icon___1Yl4x BqfmL Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
          data-garden-container-id="keyboardfocus"
          data-garden-container-version="0.2.6"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.0.2"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.0.2"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="container"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <footer
      class="sc-bZQynM cvZVJM"
    >
      <div
        class="sc-gzVnrw fiLCyX"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`feedback actions on no click asks for the reason 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="sc-bwzfXH bwWnNX"
    >
      <div
        class="sc-bxivhb sc-ifAKCX kPfswV"
      >
        <h1
          class="sc-htpNat jTlEqc"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize"
          class="IconButton-x15t1e-0 sc-EHOje index__c-btn--icon___1Yl4x BqfmL Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
          data-garden-container-id="keyboardfocus"
          data-garden-container-version="0.2.6"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.0.2"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.0.2"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="container"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <footer
      class="sc-bZQynM cvZVJM"
    >
      <div
        class="sc-gzVnrw fiLCyX"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
    <div
      class="popupWrapper"
      data-testid="slide-appear-container"
      role="presentation"
      style="opacity: 1; bottom: 0px;"
    >
      <div
        class="container"
      >
        <h3
          class="title"
        >
          Please tell us why.
        </h3>
        <div
          class="reasonButtons"
        >
          <button
            class="
      button
      relatedBtn
    "
            data-testid="pill-button"
          >
            It's related, but it didn't answer my question
          </button>
          <button
            class="
      button
      unrelatedBtn
    "
            data-testid="pill-button"
          >
            It's not related to my question
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`feedback actions on yes click hides the feedback popup 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="sc-bwzfXH bwWnNX"
    >
      <div
        class="sc-bxivhb sc-ifAKCX kPfswV"
      >
        <h1
          class="sc-htpNat jTlEqc"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize"
          class="IconButton-x15t1e-0 sc-EHOje index__c-btn--icon___1Yl4x BqfmL Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
          data-garden-container-id="keyboardfocus"
          data-garden-container-version="0.2.6"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.0.2"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.0.2"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="container"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <footer
      class="sc-bZQynM cvZVJM"
    >
      <div
        class="sc-gzVnrw fiLCyX"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`passing of scroll container classes 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="sc-bwzfXH bwWnNX"
    >
      <div
        class="sc-bxivhb sc-ifAKCX kPfswV"
      >
        <h1
          class="sc-htpNat jTlEqc"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize"
          class="IconButton-x15t1e-0 sc-EHOje index__c-btn--icon___1Yl4x BqfmL Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
          data-garden-container-id="keyboardfocus"
          data-garden-container-version="0.2.6"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.0.2"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.0.2"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="container"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <footer
      class="sc-bZQynM cvZVJM"
    >
      <div
        class="sc-gzVnrw fiLCyX"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the expected classes 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="sc-bwzfXH bwWnNX"
    >
      <div
        class="sc-bxivhb sc-ifAKCX kPfswV"
      >
        <h1
          class="sc-htpNat jTlEqc"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize"
          class="IconButton-x15t1e-0 sc-EHOje index__c-btn--icon___1Yl4x BqfmL Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
          data-garden-container-id="keyboardfocus"
          data-garden-container-version="0.2.6"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.0.2"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.0.2"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="container"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <footer
      class="sc-bZQynM cvZVJM"
    >
      <div
        class="sc-gzVnrw fiLCyX"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the expected mobile classes 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="sc-bwzfXH bwWnNX"
    >
      <div
        class="sc-bxivhb sc-ifAKCX kPfswV"
      >
        <h1
          class="sc-htpNat jTlEqc"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize"
          class="IconButton-x15t1e-0 sc-EHOje index__c-btn--icon___1Yl4x BqfmL Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
          data-garden-container-id="keyboardfocus"
          data-garden-container-version="0.2.6"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.0.2"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.0.2"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="container"
      data-testid="scroll-container-content"
    >
      <div
        class="content contentMobile"
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external mobile"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <footer
      class="sc-bZQynM cvZVJM"
    >
      <div
        class="sc-gzVnrw fiLCyX"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the expected title 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="sc-bwzfXH bwWnNX"
    >
      <div
        class="sc-bxivhb sc-ifAKCX kPfswV"
      >
        <h1
          class="sc-htpNat jTlEqc"
          data-testid="widget-title"
        >
          Support
        </h1>
        <button
          aria-label="Minimize"
          class="IconButton-x15t1e-0 sc-EHOje index__c-btn--icon___1Yl4x BqfmL Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
          data-garden-container-id="keyboardfocus"
          data-garden-container-version="0.2.6"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.0.2"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.0.2"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="container"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <footer
      class="sc-bZQynM cvZVJM"
    >
      <div
        class="sc-gzVnrw fiLCyX"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the feedback popup after a certain time has passed 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="sc-bwzfXH bwWnNX"
    >
      <div
        class="sc-bxivhb sc-ifAKCX kPfswV"
      >
        <h1
          class="sc-htpNat jTlEqc"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize"
          class="IconButton-x15t1e-0 sc-EHOje index__c-btn--icon___1Yl4x BqfmL Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
          data-garden-container-id="keyboardfocus"
          data-garden-container-version="0.2.6"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.0.2"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.0.2"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="container"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <footer
      class="sc-bZQynM cvZVJM"
    >
      <div
        class="sc-gzVnrw fiLCyX"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
    <div
      class="popupWrapper"
      data-testid="slide-appear-container"
      role="presentation"
      style="opacity: 1; bottom: 0px;"
    >
      <div
        class="container"
      >
        <h3
          class="title"
        >
          Does this article answer your question?
        </h3>
        <div
          class="container buttonRight optionButtons"
        >
          <button
            class="
      button
      
    "
            data-testid="pill-button"
          >
            Yes
          </button>
          <button
            class="
      button
      noBtn
    "
            data-testid="pill-button"
          >
            No, I need help
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the help center article 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="sc-bwzfXH bwWnNX"
    >
      <div
        class="sc-bxivhb sc-ifAKCX kPfswV"
      >
        <h1
          class="sc-htpNat jTlEqc"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize"
          class="IconButton-x15t1e-0 sc-EHOje index__c-btn--icon___1Yl4x BqfmL Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
          data-garden-container-id="keyboardfocus"
          data-garden-container-version="0.2.6"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.0.2"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.0.2"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="container"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        >
          title
        </h2>
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        >
          <p>
            body
          </p>
        </div>
      </div>
    </div>
    <footer
      class="sc-bZQynM cvZVJM"
    >
      <div
        class="sc-gzVnrw fiLCyX"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;
